# min-menu-maker

./: LICENSE.txt  README.md  __init__.py  bullet_types.py  bullets.py  menus.py  pyproject.toml  setup.cfg  tests.py
tests/: example.py
