[project]
name = "min_menu_maker"
version = "1.0.0"
description = "Minimal menu maker for python"
authors = [{name="Tathya Garg", email="tathya.garg@gmail.com"}]
readme = "README.md"

[build-system]
requires = ['setuptools>=65']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
py-modules=[]
