[metadata]
name = menu-maker
version = 0.0.1
author = Fenrir0279
author_email = tathya.garg@gmail.com
description = A module to help you create modules easily and concisely!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fenrir0279/menu-maker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

python_requires = >=3.11
