[metadata]
name = menu-maker
version = 1.0.0
author_email = tathya.garg@gmail.com
description = A module to help you create modules easily and concisely!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fenrir0279/menu-maker
python_requires = >=3.11
